AH-2007-11-22-0: Enhancem.: Enabled inactive test bugs/issuezilla/1832 for 
                            the 6.2 -hold_jid_ad option
                 Review:    CR

CR-2007-11-21-0: Enhancem.: o added menu item for running only startup hooks
                            o connection test now also tests java compile host
                            o improved shutdown behaviour for blocking lx-24 qmaster 
                              threads (processes)
                 Bugfix:    o fixed shutdown/restart for hedeby (not all managed
                              hosts was started)
                            o updated hedeby testsuite for new 
                              ShowComponentStatusCliCommand (hedeby issue #204)
                 Review:    RH

JG-2007-11-21-0: Enhancem.: Added test bugs/issuezilla/2419.
                 Review:    MD

MP-2007-11-20-0: Bugfix:    Added test for qstat -j xml and plain output
                            comparison. Test for CR 6440408.
                 Review:    JG

JG-2007-11-20-0: Enhancem.: Added test bugs/issuezilla/2418.
                 Review:    MD

CR-2007-11-15-0: Bugfix:    o Added missing cleanup procedure for issue 88
                 Bugfix:    o config_generic_port() could not be used for
                              ports which are odd number
                 Issue:     Hedeby 178
                 Review:    RH

AA-2007-11-15-1: Enhancem.: added support for new JMX parameters
                            automatic installation
                 Review:    CR

AA-2007-11-15-0: Enhancem.: added support for new JMX parameters
                 Review:    CR

CR-2007-11-14-1: Enhancem.: added new hedeby test: file_permissions
                 Bugfix:    Fixed and enhanced following tests:
                               o manage_admin_user
                               o show_status
                               o issue_67
                               o issue_88