@@ -1,3 +1,8 @@
+JG-2007-11-22-0: Enhancem.: Improved autoinstall of large numbers of exec hosts.
+                 Bugfix:    Fixed install re_init when 
+                            CHECK_TESTSUITE_INSTALL_MODE is set to "automatic"
+                 Review:    MD
+
 AH-2007-11-22-0: Enhancem.: Enabled inactive test bugs/issuezilla/1832 for 
                             the 6.2 -hold_jid_ad option
                  Review:    CR
